# email-cli

./: Cargo.toml  README.md  install.sh
assets/: email-cli-notify  notify.swift
assets/EmailCLI.app/Contents/: Info.plist
assets/EmailCLI.app/Contents/MacOS/: email-cli-notify
assets/EmailCLI.app/Contents/Resources/: EmailCLI.aiff
assets/EmailCLI.app/Contents/_CodeSignature/: CodeResources
docs/superpowers/specs/: 2026-03-27-practical-improvements-design.md
src/: app.rs  cli.rs  db.rs  error.rs  helpers.rs  http.rs  main.rs  models.rs  output.rs  resend.rs
src/commands/: account.rs  agent_info.rs  autostart.rs  broadcast.rs  contact.rs  contact_property.rs  daemon.rs  domain.rs  draft.rs  email.rs  inbox.rs  mod.rs  outbox.rs  segment.rs  send.rs  sync.rs  topic.rs  update.rs  webhook.rs
thoughts/shared/: agent-fixes-v0.4.md  gpt-pro-review-2026-04-04.md
thoughts/shared/handoffs/email-cli-menu-bar/: handoff-2026-04-04.md
