[package]
name = "email-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
dirs = "6.0.0"
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
uuid = { version = "1.16.0", features = ["v4"] }
