[package]
name = "email-cli"
version = "0.5.0"
edition = "2024"
description = "Agent-friendly email CLI for Resend"
license = "MIT"
repository = "https://github.com/199-biotechnologies/email-cli"
homepage = "https://github.com/199-biotechnologies/email-cli"
keywords = ["email", "cli", "resend", "agent", "automation"]
categories = ["command-line-utilities", "email"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["clock"] }
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4"
dirs = "6.0.0"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication", "NSStatusBar", "NSStatusItem", "NSStatusBarButton", "NSMenu", "NSMenuItem", "NSImage", "NSEvent", "NSResponder", "NSControl", "NSButton", "NSCell", "NSView"] }
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSData", "NSThread", "NSRunLoop", "NSDate", "NSAutoreleasePool", "NSTimer"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
self_update = { version = "0.43.1", features = ["archive-tar", "compression-flate2"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10"
tiny_http = "0.12"
uuid = { version = "1.16.0", features = ["v4"] }
